--- a/styles/syntax-variables.less
+++ b/styles/syntax-variables.less
@@ -4,15 +4,15 @@
 // include a syntax-variables.less file.
 
 // General colors
-@syntax-text-color: @dark;
-@syntax-cursor-color: @dark;
+@syntax-text-color: @dark-blue;
+@syntax-cursor-color: @dark-blue;
 @syntax-selection-color: lighten(@dark-gray, 10%);
 @syntax-background-color: @white;
 
 // Guide colors
 @syntax-wrap-guide-color: @dark-gray;
 @syntax-indent-guide-color: @light-gray;
-@syntax-invisible-character-color: @medium-gray;
+@syntax-invisible-character-color: @med-gray;
 
 // For find and replace markers
 @syntax-result-marker-color: @light-gray;
@@ -22,7 +22,7 @@
 @syntax-gutter-text-color: @dark-gray;
 @syntax-gutter-text-color-selected: @syntax-gutter-text-color;
 @syntax-gutter-background-color: @light-gray;
-@syntax-gutter-background-color-selected: @medium-gray;
+@syntax-gutter-background-color-selected: @med-gray;
 
 // For git diff info. i.e. in the gutter
 @syntax-color-renamed: @red;
